Fix header-wrapper margins to fit nav links on small screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -415,3 +415,9 @@ main {
     -webkit-animation-delay: 633.33333ms;
             animation-delay: 633.33333ms;
 }
+
+@media (max-width: 1024px) {
+  #header-wrapper {
+    margin: inherit;
+  }
+}
